fixed all vertical spacings in the titles slide

--- a/style/nersc-theme.css
+++ b/style/nersc-theme.css
@@ -140,7 +140,7 @@ section.title {
 section.title::before {
   content: "";
   position: absolute;
-  top: 80px;
+  top: 40px;
   left: calc(25% / 2 - 96px);
   width: 192px;
   height: 256px;
@@ -153,7 +153,7 @@ section.title::before {
 section.title::after {
   content: "";
   position: absolute;
-  bottom: 80px;
+  bottom: 40px;
   left: calc(25% / 2 - 96px);
   width: 192px;
   height: 80px;
@@ -174,18 +174,18 @@ section.title h3 {
 }
 
 section.title h1 {
-  top: 132px;
+  top: 144px;
   font-size: 48px;
 }
 
 section.title h2 {
-  top: 190px;
+  top: 202px;
   font-size: 36px;
   font-weight: normal;
 }
 
 section.title h3 {
-  top: 255px;
+  top: 267px;
   font-size: 24px;
   font-weight: normal;
 }
@@ -193,7 +193,7 @@ section.title h3 {
 /* The .authors div is the only one needed now */
 section.title .authors {
   position: absolute;
-  bottom: 80px;
+  bottom: 59px;
   left: 30%;
   right: 5%;
   font-size: 16px;
